--- a/ja/_posts/2022-06-15-network.md
+++ b/ja/_posts/2022-06-15-network.md
@@ -40,14 +40,20 @@ date: 2022-06-15 15:03:20 +0900
 
 <!-- outline-end -->
 
-# 네트워크 빠르게 훑어 보기(1)
+# 네트워크 빠르게 훑어 보기
 Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 보았습니다.
 <br>
 자료 출처: www.ddarahakit.kro.kr 님(ddarahakit.tistory.com)
 
+<br>
+<hr>
+
 ## ch1. 네트워크
 * 여러 컴퓨터가 통신하는 통신망
 * 인터넷: 전세계에서 가장 큰 네트워크
+
+<br>
+<hr>
 
 ### 분류
 * 분류1
@@ -63,6 +69,9 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
 * multicast: 1:n,
 * broadcast: m:n, 불특정 다수에게 통신
 
+<br>
+<hr>
+
 ## ch2. 네트워크 모델
 * 네트워크 계층 모델 - **TCP/IP(실제)**, OSI7(이론) 계층
   * OSI 중에서 2, 3, 4, 7 계층이 우리한테 아주 중요함
@@ -73,6 +82,9 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
 * 네트워크를 통해 전달되는 데이터를 뜻함
 * 미트료시카처럼 까도 까도 또 내용물이 나오는 형태
 * (Ethernet ( IPv4 ( TCP ( Data ) ) ) )
+
+<br>
+<hr>
 
 ## ch3. 2계층
 > 가까이 있는 컴퓨터끼리 연결할 때!
@@ -86,6 +98,9 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
 * Source(6byte, 보내는 쪽의 MAC주소)
 * Type(2byte, 이더넷 상단 Data에 대한 type정보)
 * Data(이더넷 상단 프로토콜 데이터)
+
+<br>
+<hr>
 
 ## ch4. 3계층(IP주소)
 > 다른 네트워크 대역(멀리 떨어진 네트워크)까지 데이터를 전달하는 일을 담당함
@@ -123,6 +138,9 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
     * 방법은 추후에 알아 볼 예정
   * ![img_1.png](https://user-images.githubusercontent.com/104918800/173870257-f0eabe3c-3ac5-4c63-aac0-8d910359d7fd.png)
 
+<br>
+<hr>
+
 ## ch5. ARP 프로토콜의 작동
 * 송신자는 수신자의 맥주소를 모르는 상황
 1. 맥주소를 모르니, 모든 PC에 이 IP 주소를 가진 PC의 맥주소를 알려주세요!라고 **브로드캐스트**를 한다
@@ -130,8 +148,17 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
 3. IP 주소가 일치하는 컴퓨터는 자신의 맥주소를 **유니캐스트**로 알려준다
 * 참고로 ARP 테이블에 통신 했던 컴퓨터의 (MAC포함)정보가 남는다
 
+<br>
+<hr>
+
 ## ch6. 네트워크와 통신 과정
 * ![img_4.png](https://user-images.githubusercontent.com/104918800/173870270-4a39f2ec-9879-4aa9-80cf-ba1debe22fa9.png)
+* IP를 통해 ARP(브로드캐스팅)를 요청해서 MAC주소를 전달 받는다(유니캐스트)
+* 요청하는 PC는 첫 번째 라우터와 통신, 첫 번째 라우터는 그 다음 라우터와 통신하는 방식으로 순차적으로 MAC 주소를 얻음
+
+
+<br>
+<hr>
 
 ## ch7. 컴퓨터의 프로그램끼리 통신 과정
 * 카톡으로 보냈는데 라인으로 올 수가 있나?? No, 그 원리를 알아 보자
@@ -148,6 +175,9 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
   * ![img_5.png](https://user-images.githubusercontent.com/104918800/173870245-db0d7e5e-4833-48f5-841a-6318c9e00394.png)
 * 포트넘버는 의무사항은 아니지만, 그래도 지켜 주자
 * 그 외에 일반 사용자가 사용할 수 있는  Dynamic 포트가 있음 (49152~65535)
+
+<br>
+<hr>
 
 ## 여기까지 정리
 > MAC: 가까운 거리의 컴퓨터끼리 사용하는 주소
