--- a/ja/_posts/2022-06-16-network.md
+++ b/ja/_posts/2022-06-16-network.md
@@ -40,51 +40,51 @@ date: 2022-06-16 11:03:20 +0900
 
 <!-- outline-end -->
 
-# 네트워크 빠르게 훑어 보기(2)
+# 네트워크 빠르게 훑어 보기
 Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 보았습니다 (계속)
 <br>
 자료 출처: www.ddarahakit.kro.kr 님(ddarahakit.tistory.com)
 
-<hr>
-
-# 6월 16일
-네트워크 빠르게 훑어 보기(2)
-
+<br>
 <hr>
 
 ## ch8. UDP
 * 우리는 TCP만 볼 예정, 생략
 
+<br>
 <hr>
 
 ## ch9. TCP
 * (복습)포트: 클라이언트 프로그램이 서버 프로그램을 알아 볼 수 있도록 하는 것이 포트번호
   * ![img_8.png](https://user-images.githubusercontent.com/104918800/174114592-51bc958e-701f-48d2-af13-f61cc31f3657.png)
-###  3 way handshake
-  ![img_10.png](https://user-images.githubusercontent.com/104918800/174114596-066f6e1b-88f3-4135-9155-8f5d4b33bf98.png)
-1. 요청은 항상 클라이언트가 먼저 보냄(SYN)
-2. 서버는 응답을 해 줌(SYN) + 반대로 서버도 요청을 보냄 (ACK)
-3. 클라이언트까지 최종 확인(ACK)
-  * 위와 같이 연결 수립을 한 다음 다음 통신함
 
+###  3 way handshake
+* ![img_10.png](https://user-images.githubusercontent.com/104918800/174114596-066f6e1b-88f3-4135-9155-8f5d4b33bf98.png)
+  1. 요청은 항상 클라이언트가 먼저 보냄(SYN)
+  2. 서버는 응답을 해 줌(SYN) + 반대로 서버도 요청을 보냄 (ACK)
+  3. 클라이언트까지 최종 확인(ACK)
+     * 위와 같이 연결 수립을 한 다음 다음 통신함
+
+<br>
+<hr>
 
 ### 상태전이도
-![img_11.png](https://user-images.githubusercontent.com/104918800/174114601-ec637272-0846-4ee4-a424-21a4c97540fc.png)
-1. 서버 측은 Always listening 상태
-2. 그 상태에서 클라이언트가 요청을 보냄
-3. SYN을 보내고 받은 상태에서도 서버는 listening 상태 + SYN_Received 상태
-4. 서버: 서버 측도 SYN을 요청함
-5. 확인 ACK를 보내 최종 연결함, 서버는 listening 상태 + Established 상태
-
-![img_13.png](https://user-images.githubusercontent.com/104918800/174114603-1a927ff6-4e10-459a-be8d-11a22b4c7fed.png)
-* 점선: 서버
-* 실선: 클라이언트
-
-
+* ![img_11.png](https://user-images.githubusercontent.com/104918800/174114601-ec637272-0846-4ee4-a424-21a4c97540fc.png)
+  1. 서버 측은 Always listening 상태
+  2. 그 상태에서 클라이언트가 요청을 보냄
+  3. SYN을 보내고 받은 상태에서도 서버는 listening 상태 + SYN_Received 상태
+  4. 서버: 서버 측도 SYN을 요청함
+  5. 확인 ACK를 보내 최종 연결함, 서버는 listening 상태 + Established 상태
 
 <br>
 
-### 실습1
+* ![img_13.png](https://user-images.githubusercontent.com/104918800/174114603-1a927ff6-4e10-459a-be8d-11a22b4c7fed.png)
+  * 점선: 서버
+  * 실선: 클라이언트
+
+<br>
+
+### ch9-1. 실습1
 > VM 웨어에 설치한 윈도우를 서버로 만들어서 서버-클라이언트 통신을 시도해 보자
 >
 > apache webserver를 만들 예정이다
@@ -106,7 +106,7 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
 
 4. cmd 창에서 PID를 확인하면 netstat에서 80번 포트를 사용하고 있는 프로그램이 Apache웹서버 라는 것을 확인 가능
    * ![img_21](https://user-images.githubusercontent.com/104918800/174114615-b1b2fd9f-bb0b-49ed-baab-773970b58fc6.png)
-> 아무튼 해당 포트가 열려있는지(Listening) 확인할 수 있어야 함
+   * **아무튼 해당 포트가 열려있는지(Listening) 확인할 수 있어야 함**
 5. 웹사이트에 자신의 IP+80를 입력한 경우 아파치 웹서버에 연결 됨
    * ![img_23](https://user-images.githubusercontent.com/104918800/174114617-66d21577-e03b-49a9-8bf3-d28d3ff85164.png)
    * 웹에서 보통 80은 생략됨
@@ -117,7 +117,7 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
 
 <br>
 
-### 실습2
+### ch09-2. 실습2
 > Apache를 설치해 옆 학우 서버에 접속해 보자
 
 
@@ -141,6 +141,7 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
 >
 > 비싼 장비가 동원되면 사실 모든 패킷을 잘 볼 수 있음
 
+<br>
 <hr>
 
 ## ch10. 포트포워딩
@@ -149,7 +150,7 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
 
 <br>
 
-### 실습
+### ch10-1. 실습
 1. VM ware의 virtual network editor 실행
 2. NAT (가상 라우터) setting에 다음과 같이 포트포워딩을 만들어 보자
    * ![img_29](https://user-images.githubusercontent.com/104918800/174114632-4a36a53c-8546-4802-b5a9-80d58eefc5e8.png)
@@ -167,6 +168,7 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
     1. 라우터의 포트포워딩을 만들어 둔다
     2. 내 컴퓨터 방화벽에 인바운드 규칙을 설정한다
 
+<br>
 <hr>
 
 ## ch11. 7계층 프로토콜 HTTP
@@ -194,7 +196,9 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
       * HTTP 메소드(요청 타입)
       * ![img_41](https://user-![img_52](https://user-images.githubusercontent.com/104918800/174116021-b28279bd-e190-4760-8072-44b98057ef17.png)
 
-#### 요청 프로토콜에서, 가장 중요한 Get, Post 방식
+<br>
+
+##### 요청 프로토콜에서, 가장 중요한 Get, Post 방식
 1. Get 방식
   * ![img_42](https://user-images.githubusercontent.com/104918800/174114656-f723768a-c828-40b3-b676-ba977285b0c4.png)
   * ![img_43](https://user-images.githubusercontent.com/104918800/174114657-d00a5c72-8244-4887-b570-6d0771727367.png)
@@ -204,7 +208,9 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
   * 빨간 네모: 클라이언트가 특정 페이지를 요청하면서 서버로 보내는 데이터
       * 데이터를 전달 할 때, 중요한 정보를 업로드 할 때(로그인 정보 등), URL이 아닌 **Body**에 담겨서 보내짐
 
-#### URL
+<br>
+
+##### URL
 * ![img_49](https://user-images.githubusercontent.com/104918800/174114563-f4f31bf0-47bd-417e-b0f7-eac45a77aa7a.png)
   * 맨 앞: 사용하고 싶은 프로토콜
   * 두번째: IP주소, 포트 (DNS 변환)
@@ -248,8 +254,9 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
     * 유저 에이전트: 운영체제(안드로이드 등), 브라우저 등 사용자 정보 확인 가능
 * 응답 헤더
   * 서버 정보를 담고 있음
-  * 굳이 서버 정보는 안 쓰는것이 좋음(서버가 아파치인지..)
+  * 굳이 서버 정보는 안 쓰는 추세(서버가 아파치인지 등의 정보..)
 
+<br>
 <hr>
 
 ## ch13. 도메인 네임 서버
@@ -260,3 +267,29 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
 
 * 대충 이런 과정
   * ![img_47](https://user-images.githubusercontent.com/104918800/174116027-27a5093a-70d5-411e-9ac0-b087d79a4c3e.png) ![img_52](https://user-images.githubusercontent.com/104918800/174116383-508fcbf3-6179-4d73-a495-c84633ed1f20.png)
+
+<br>
+<hr>
+
+>## 여기까지 HTTP 프로토콜에 대한 핵심 정리
+* 요청 - 요청라인
+  1. HTTP메소드
+     1. GET
+        * 중요하지 않은 데이터를 서버로 보내서 페이지를 요청할 때 사용
+        * URL 길이는 제한적이라 적은 데이터를 보낼 수 있음
+     2. POST
+        * 중요한 데이터를 서버로 보내서 페이지를 요청할 때 사용
+        * body에 보낼 수 있어서 많은 데이터를 보낼 수 있음'
+  2. URI와 URL
+      * ID: ID와 매핑된 자원을 요청, django에서는 urls.py 파일에 매핑
+      * Locator: 서버의 특정 위치에 있는 자원을 요청
+
+<br>
+
+* 응답 - 응답라인
+  * 상태코드
+    * 200: 정상, 웬만하면 볼 일이 없음
+    * 403: 서버에서 클라이언트를 거부함(권한 오류 등)
+    * 404: 없는 페이지를 요청
+    * 500: 개발자가 코드를 잘못 짠 상황 (서버 에러)
+    * 503: 세션이 가득 참(사용자가 너무 몰림)
