--- a/ja/_posts/2022-06-16-django1.md
+++ b/ja/_posts/2022-06-16-django1.md
@@ -57,8 +57,8 @@ date: 2022-06-16 14:00:10 +0900
 
 <hr>
 
-# 1. 개발 환경 설정하기
-## 설치하기
+# 개발 환경 설정하기
+## 1-1. 설치하기
 1. 장고 프레임워크를 설치해 보자
    * ![img_1.png](https://user-images.githubusercontent.com/104918800/174097564-ee876427-60d1-4ce7-a526-a0bc929f8981.png)
 2. django  admin이라는 프로그램이 설치가 되었으니 프로젝트를 생성하자
@@ -71,7 +71,7 @@ date: 2022-06-16 14:00:10 +0900
 5. CMD에서 netstat -ano로도 확인이 가능하다
    * ![img_6.png](https://user-images.githubusercontent.com/104918800/174097580-b2679960-7b4e-4c71-a3be-26151792cec5.png)
 
-## 각각의 파일은 어떤 파일일까?
+## 1-2. 각각의 파일은 어떤 파일일까?
 ![img_9.png](https://user-images.githubusercontent.com/104918800/174097554-4678e440-f39b-4757-9c5f-66effdc88dff.png) <br>
 <details> <summary>
 manage.py(...) </summary>
