--- a/ja/_posts/2022-06-16-django2.md
+++ b/ja/_posts/2022-06-16-django2.md
@@ -40,8 +40,8 @@ date: 2022-06-16 15:00:10 +0900
 
 <!-- outline-end -->
 
-# 2. 앱 생성, 구성
-## 앱 생성하기
+# 앱 생성, 구성
+## 2-1. 앱 생성하기
 1. ex01 이라는 사용자 정의 앱을 만들어 보자
    * ![img_20.png](https://user-images.githubusercontent.com/104918800/174098483-0102ebb5-04d4-4845-8da2-f2ccd1dce83b.png)
 2. 로그인, 회원 가입, 상품, 게시판 등 각각의 역할을 수행하는 앱을 구분해서 만들 수 있다
@@ -50,7 +50,7 @@ date: 2022-06-16 15:00:10 +0900
 
 <hr>
 
-## 앱 내부의 파일을 알아 보자
+## 2-2. 앱 내부의 파일을 알아 보자
 * __init__.py: 파이썬 2 버전과 호환할 수 있도록 도움. 지워도 무관
 * admin.py: 관리자가 접속하면 보이는 화면, 기본적으로 건드리지 않는다
 * apps.py: 앱을 프로젝트에 등록하는 기능, 기본적으로 건드리지 않는다
@@ -62,7 +62,7 @@ date: 2022-06-16 15:00:10 +0900
 
 <hr>
 
-## 앱을 구성해 보자
+## 2-3. 앱을 구성해 보자
 1 . 아까 생성한 앱의 views.py를 건드릴 것이다. 함수를 생성한다.
 
 ```python
