--- a/ja/_posts/2022-06-16-django3.md
+++ b/ja/_posts/2022-06-16-django3.md
@@ -41,8 +41,8 @@ date: 2022-06-16 16:00:10 +0900
 <!-- outline-end -->
 
 
-# 3. 장고의 웹 동작 방식(코드)
-## MVT 구조
+# 장고의 웹 동작 방식(코드)
+## 3-1. MVT 구조
 Model + View + Template 구조
 
 |  구분  | 설명                                                                                                                                        |
@@ -70,7 +70,7 @@ URI에 등록된 함수를 찾아서, 실행, 요청한 사용자한테 returen 
 <hr>
 
 
-## MVT 구조에서 템플릿 생성해 보기
+## 3-2. MVT 구조에서 템플릿 생성해 보기
 1. 프로젝트 폴더 내에 templates 폴더를 생성한다
    * ![img_37.png](https://user-images.githubusercontent.com/104918800/174099075-c6851535-06e5-4be2-9685-07cbd6b22e57.png)
 2. page1.html파일을 만든다
