--- a/ja/_posts/2022-06-16-django4.md
+++ b/ja/_posts/2022-06-16-django4.md
@@ -41,7 +41,7 @@ date: 2022-06-16 17:00:10 +0900
 <!-- outline-end -->
 
 
-# 4. 데이터 송수신(Model 미사용)
+# 데이터 송수신(Model 미사용)
 ## 4-1. (클라이언트 > 서버) 데이터를 전송하는 코드를 짜 보자
 일단 HTTP 프로토콜(get/post)만 이용해서 데이터를 받아 볼 것임 (아직은 모델을 사용하지는 않음)
 <br> 우선 **get 방식**으로 클라이언트가 전송한 데이터를 전달받아 보자
