--- a/ja/_posts/2022-06-16-network.md
+++ b/ja/_posts/2022-06-16-network.md
@@ -189,7 +189,7 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
 
 <br>
 
-### 요청 프로토콜
+### HTTP 프로토콜 - 요청 프로토콜
 ![img_38](https://user-images.githubusercontent.com/104918800/174114647-6e49c091-46c9-4e5d-8800-1f87f301038b.png) >> ![img_39](https://user-images.githubusercontent.com/104918800/174114649-9b71857b-8381-440e-8db4-75c1132fb061.png)
 * 그 중 Request Line(가장 중요)
     * ![img_40](https://user-images.githubusercontent.com/104918800/174114650-b07fc5cf-10ae-4841-b321-fde5c314224c.png)
@@ -224,7 +224,7 @@ Django에 들어가기 앞서 필요한 네트워크 지식을 빠르게 훑어 
 
 <br>
 
-### 응답 프로토콜
+### HTTP 프로토콜 - 응답 프로토콜
 ![img_51](https://user-images.githubusercontent.com/104918800/174114569-302dbacd-925e-4812-8efa-b78d594b4a10.png)
 * 그 중 Status Line(가장 중요)
   * ![img_53](https://user-images.githubusercontent.com/104918800/174114573-5ad8b691-b870-4d33-8fb4-4078e317bdd0.png)
