--- a/ja/_posts/2022-06-16-django1.md
+++ b/ja/_posts/2022-06-16-django1.md
@@ -74,7 +74,7 @@ date: 2022-06-16 14:00:10 +0900
 ## 1-2. 각각의 파일은 어떤 파일일까?
 ![img_9.png](https://user-images.githubusercontent.com/104918800/174097554-4678e440-f39b-4757-9c5f-66effdc88dff.png) <br>
 <details> <summary>
-manage.py(...) </summary>
+manage.py(클릭) </summary>
 
 
 <br>
@@ -88,12 +88,12 @@ manage.py(...) </summary>
 <br>
 
 <details> <summary>
-db.sqlite3(...) </summary>
+db.sqlite3(클릭) </summary>
 
 
 <br>
 
-→ 따로 DB가 없는 경우 가볍게 쓸 수 있는 로컬 데이터베이스 파일(생성 시 비어 있음)
+→ 따로 DB가 없는 경우 가볍게 쓸 수 있는 로컬 데이터베이스 파일(기본적으로 시 비어 있음)
 
 <br>
 
@@ -102,21 +102,21 @@ db.sqlite3(...) </summary>
 <br>
 
 <details> <summary>
-config 폴더(...) </summary>
+config 폴더(클릭) </summary>
 
 
 
 <br>   __init__.py: 파이썬 2 버전과 호환할 수 있도록 도움. 지워도 무관함 (파이썬 2에서는 이게 있어야만 패키지로 인식) <br>
-<br>   settings.py: 프로젝트 설정이 들어가는 파일
-<br>    → SECRET_KEY: Django의 보안 기능을 맡는 키, 공개하면 절대 안됨
-<br>    → DEBUG: 디버그 출력 여부
-<br>    → ALLOWED_HOST: 허용된 호스트 추가 가능
-<br>    → INSTALLED_APPS: Django에서 사용할 앱, 바꾸거나 추가할 수 있다
-<br>    → MIDDLEWARE: 안쪽에서 동작하는 기본 앱, 인증, 보안 등등
-<br>    → ROOT_URLCONF: urls 설정 파일의 경로(위치)를 정하는 곳
-<br>    → WSGI: 설정파일을 연결
-<br>    → Database: 기본 DB 지정
-<br>    → AUTH: DB에 저장되는 ID/PW 등에 대해 (단방향)암호화 해 줌, **복호화 불가능**
+<br>   settings.py: 프로젝트 설정이 들어가는 파일 <br>
+<br>    → SECRET_KEY: Django의 보안 기능을 맡는 키, 공개하면 절대 안됨 <br>
+<br>    → DEBUG: 디버그 출력 여부 <br>
+<br>    → ALLOWED_HOST: 허용된 호스트 추가 가능 <br>
+<br>    → INSTALLED_APPS: Django에서 사용할 앱, 바꾸거나 추가할 수 있다 <br>
+<br>    → MIDDLEWARE: 안쪽에서 동작하는 기본 앱, 인증, 보안 등등 <br>
+<br>    → ROOT_URLCONF: urls 설정 파일의 경로(위치)를 정하는 곳 <br>
+<br>    → WSGI: 설정파일을 연결 <br>
+<br>    → Database: 기본 DB 지정 <br>
+<br>    → AUTH: DB에 저장되는 ID/PW 등에 대해 (단방향)암호화 해 줌, **복호화 불가능** <br>
 <br>    → 그 외에 기본 언어, 타임존 등을 변경할 수 있음 <br>
 <br>  urls.py: 사용하는 URI값을 실제 URL 값과 연결시키는 곳 <br>
 <br>  asgi, wsgi: 웹서버에 배포 시 설정파일들을 연결해 주는 파일. 나중에 자세히 알아 볼 예정
@@ -128,7 +128,7 @@ config 폴더(...) </summary>
 
 > #### Q. URL 와 URI의 차이가 뭐지 <br>
 > <details> <summary>
-> 답변 펼쳐보기 </summary>
+> 답변 펼쳐보기(클릭) </summary>
 >  <br>장고는 URL이 아닌 URI를 쓰고 있음 <br><br>
 > URL은 Location 즉 위치 기준이고, URI는 Identifier 즉 ID 기준임 <br><br>
 > 따라서 실제 URL은 복잡하지만 URI를 간단하게, <br><br>
