image uploaded to github server

--- a/ja/_posts/2022-06-17-django6.md
+++ b/ja/_posts/2022-06-17-django6.md
@@ -100,7 +100,7 @@ python ./manage.py makemigrations product
 ```
 
 * 그 결과, product의 migration 내부에 0001뭐시기 파일이 생성되었음을  볼 수 있음
-  * ![img_18.png](img_45.png)
+  * ![img_45](https://user-images.githubusercontent.com/104918800/174492114-8c006104-3aa0-4f82-9731-44722d64df25.png)
   * 마이그레이션이 어디까지 되었는 지 확인할 수 있는 폴더
   * 우리가 직접 건드릴 일은 없지만,  마이그레이션 취소 혹은 롤백 하려는 경우 이 migration을 보고 다른 코드를 지우거나 할 수 있다
 * 하지만 아직 DB에 연동이 된 상태는 아니다.
@@ -114,7 +114,7 @@ python manage.py migrate
 * 이로써 DB에 적용이 완료되었다.
 
 7 . DB에서 확인하기 위해 HeidiSQL을 통해 다음과 같이 조회해 보자
-* ![img_19.png](img_46.png)
+* ![img_46](https://user-images.githubusercontent.com/104918800/174492115-47b548ba-0d16-4e6f-aad6-3dea0dc7352a.png)
 * 현재까지 데이터를 저장할 테이블만 작성된 것이고, 아직은 데이터가 들어간 상태가 아님
 
 <br>
@@ -170,7 +170,7 @@ def readFruitGet(request):
 ```
 
 2 . 프레임(html) 만들기
-* ![img_49.png](img_49.png)
+* ![img_49](https://user-images.githubusercontent.com/104918800/174492100-8b5dcfaa-7a74-4eb0-9daa-a1f9836cb181.png)
 
 createResult.html
 ```html
@@ -226,11 +226,11 @@ urlpatterns = [
 
 5 . 실행 결과
 * 입력하는 페이지(create) 접속 후 입력
-  * ![img_50.png](img_50.png)
+  * ![img_50](https://user-images.githubusercontent.com/104918800/174492102-affbd5dd-6e31-48eb-82dd-4657502b7ca8.png)
 * DB에서 SELECT * FROM product_Fruits; 실행 시 조회
-  * ![img_51.png](img_51.png)
+  * ![img_51](https://user-images.githubusercontent.com/104918800/174492105-3a50b049-0066-4e07-93f9-5e61f5a84724.png)
 * 조회하는 페이지(list) 접속
-  * ![img_52.png](img_52.png)
+  * ![img_52](https://user-images.githubusercontent.com/104918800/174492106-69f53a17-b89f-41f1-8620-aac754b66cdc.png)
   * views에 적힌 조건대로 불러오기 성공함
 
 
