--- a/ja/_posts/2022-06-17-django5.md
+++ b/ja/_posts/2022-06-17-django5.md
@@ -53,7 +53,7 @@ date: 2022-06-17 12:11:10 +0900
 1 . 3-Tier application
    * DB를 구성할 때, 보통 웹서버랑 다른 컴퓨터에 설치하는 것이 일반적
    * 즉, 웹서버는 서버이자 DB 클라이언트가 됨
-     * (3-Tier app) <br> ![img_48.png](img_48.png)
+     * (3-Tier app) <br> ![img_48](https://user-images.githubusercontent.com/104918800/174492096-8ed6e747-23ab-448c-a8ce-ce90f1d8a846.png)
 
 <br>
 
@@ -118,17 +118,17 @@ python manage.py migrate
 
 1. 가상 머신에서 MariaDB를 설치한다
 
-2. 계정 및 UTF8 설정 <br> ![img_12.png](img_41.png)
+2. 계정 및 UTF8 설정 <br> ![img_12](https://user-images.githubusercontent.com/104918800/174492107-343cd0e6-66d1-4452-af78-a870d0d130c0.png)
   * UTF8: 한국어 호환용(이진수)
   * 비밀번호: 기본 계정 roor의 PW 설정
   * root 사용자: 원격에서 루트계정 접근 가능(평소에는 위험하니까 쓰면 안됨)
 
-3. 서비스 및 포트 설정 <br> ![img_13.png](img_42.png)
+3. 서비스 및 포트 설정 <br> ![img_13](https://user-images.githubusercontent.com/104918800/174492109-e76d05dd-9bc3-4486-b534-cc92515ad28b.png)
   * DB 프로그램은 터미널에서 실행해야 되는데, 이는 리눅스에서는 데몬, 윈도우에서 service라고 한다
   * maria와 mysql의 포트는 기본 3306
   * 그리고 버퍼 사이즈 세팅
 
-4. 서비스 및 포트 확인해 보기 <br> ![img_14.png](img_43.png)
+4. 서비스 및 포트 확인해 보기 <br> ![img_14](https://user-images.githubusercontent.com/104918800/174492111-4521577f-eecb-440e-b28c-5516a8026688.png)
    * netstat -ano를 통해 3306포트가 열려있는지 알 수 있음
    * 가상 머신의 DB 세팅 끝
 
@@ -146,7 +146,7 @@ python manage.py migrate
    3. port number
    4. DB name
 5. 혹여나 연결이 되지 않는다면 VM의 NAT를 지웠다가 다시 만들어 보자
-6. 쿼리문을 통해서 DB를 생성한다 <br> ![img_17.png](img_44.png)
+6. 쿼리문을 통해서 DB를 생성한다 <br> ![img_44](https://user-images.githubusercontent.com/104918800/174492212-f4b69f17-d219-4e7c-b71e-47481bb321b2.png)
 
 > RDBMS: 어떻게든 제약을 걸어서(스키마) 데이터를 정돈된 상태로 유지하겠다는 굳은 의지가 보임
 
