--- a/ja/_posts/2022-06-18-bob__.md
+++ b/ja/_posts/2022-06-18-bob__.md
@@ -33,7 +33,7 @@ date: 2022-06-18 19:05:00 +0900
 # to disable this page, simply set published: false or delete this file
 #published: false
 ---
-### 서론
+
 <!-- outline-start -->
 
 BOB 면접 보고 온 후기 🤯
@@ -42,4 +42,5 @@ BOB 면접 보고 온 후기 🤯
 
 
 # BOB 면접 보고 온 후기 🤯
+아직 작성중
 
