image uploaded to github server

--- a/ja/_posts/2022-06-18-django7.md
+++ b/ja/_posts/2022-06-18-django7.md
@@ -84,7 +84,7 @@ python manage.py makemigrations boardpan (보드 앱 확인시)
 ```
 
 * 마이그레이션즈 폴더 안이 0001 폴더가 생성됨
-  * ![img_53.png](img_53.png)
+  * ![img_53](https://user-images.githubusercontent.com/104918800/175184927-1bfe1f34-61e9-4210-867a-0e3351fe8896.png)
 
 5 . DB에 적용한다
 
@@ -92,9 +92,9 @@ python manage.py makemigrations boardpan (보드 앱 확인시)
 python manage.py migrate
 ```
 
-* ![img_54.png](img_54.png)
+* ![img_54](https://user-images.githubusercontent.com/104918800/175184928-1e109600-1ca1-4abd-86b2-752782283ba4.png)
 * heidi로 조회 시 나온다
-  * ![img_55.png](img_55.png) -> ![img_56.png](img_56.png)
+  * ![img_55](https://user-images.githubusercontent.com/104918800/175184929-412501ec-ff92-42c2-a505-444366af1267.png) -> ![img_56](https://user-images.githubusercontent.com/104918800/175184930-743045b7-a694-445e-9b67-b668a4ecbdb7.png)
   * DB 앱네임_클래스명 이라는 테이블이 생겼다 <br>
     * longtext: 문자 많이(물론 제한 있음)
     * 시간, id는 자동으로 저장됨
@@ -262,11 +262,11 @@ read.html
 
 10 . 결과
 1. 데이터 저장
-   * ![img_61.png](img_61.png)
-   * ![img_62.png](img_62.png)
-   * ![img_63.png](img_63.png)
+   * ![img_61](https://user-images.githubusercontent.com/104918800/175184931-c88ebfcd-2158-4758-bc00-1484c23e1c86.png)
+   * ![img_62](https://user-images.githubusercontent.com/104918800/175184915-47f99e55-eb55-4b97-874e-f2e1e0937b2e.png)
+   * ![img_63](https://user-images.githubusercontent.com/104918800/175184921-de1b4a0f-9a74-4548-906f-3f84130214f5.png)
 2. 데이터 쿼리
    * 모두 쿼리(listGet)
-     * ![img_65.png](img_65.png)
+     * ![img_65](https://user-images.githubusercontent.com/104918800/175184925-5ea7f5b5-23d2-48f6-abd3-25c8efaf6862.png)
    * 하나만 쿼리(readGet)
-     * ![img_64.png](img_64.png)
+     * ![img_64](https://user-images.githubusercontent.com/104918800/175184923-eebc382e-5ad6-4e3f-b926-f7d09b8aba26.png)
