--- a/ja/_posts/2022-06-18-django7.md
+++ b/ja/_posts/2022-06-18-django7.md
@@ -4,7 +4,7 @@
 # 영문으로 같은 내용 작성 시 id 같아야 함
 lng_pair: id_kakao_django
 # 영문으로 작성하는 경우 영문제목
-title: djagno 7 - 게시판 만들기
+title: django 7 - 게시판 만들기
 
 # 저자 설정(생략 가능)
 #author: initializer
@@ -14,7 +14,7 @@ category: django
 tags: [카카오클라우드스쿨]
 
 # 섬네일 이미지
-img: "https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Icon-notepad.svg/1200px-Icon-notepad.svg.png"
+img: "https://repository-images.githubusercontent.com/253698085/cce90300-78c3-11ea-8b94-604fad2c516d"
 
 # 댓글 비활성화 여부
 comments_disable: false
