image uploaded to github server

--- a/ja/_posts/2022-06-20-django8.md
+++ b/ja/_posts/2022-06-20-django8.md
@@ -114,7 +114,7 @@ html(이후) - postform을 통해 간소화 됨
 
 
 5 . 접속을 해 보면 모양이 조금 변경되었지만 작동은 잘 함 <br>
-* ![img_66.png](img_66.png)
+* ![img_66](https://user-images.githubusercontent.com/104918800/175810842-e56e2dbe-d541-4e7f-a0a8-aef2dfef7354.png)
 * charfield 는 그냥 일반적인 인풋 양식처럼 보이고
 * textfield 는 여러줄을 쓸 수 있게 수정이 됨
   * 페이지 소스를 보면 maxlength 속성이 알아서 추가 됨, 레이블도 표시됨
@@ -338,8 +338,8 @@ read.html
 * 참고로 위 post는 views에서 'post' 와 이름이 동일해야 한다
 
 6 . 결과
-* ![img_67.png](img_67.png)
-* (타이틀 클릭시) ![img_68.png](img_68.png)
+* ![img_67](https://user-images.githubusercontent.com/104918800/175810845-cd9f563d-94ca-4a5c-b0ef-8a817d3ea87b.png)
+* (타이틀 클릭시) <br> ![img_68](https://user-images.githubusercontent.com/104918800/175810839-ef994954-a9d2-451c-9e38-071ec7f14b60.png)
 
 
 <br>
