image uploaded to github server

--- a/ja/_posts/2022-06-20-django9.md
+++ b/ja/_posts/2022-06-20-django9.md
@@ -86,9 +86,9 @@ views.py 중 def create(request):
 * readGet/게시물번호로 이동하므로 create는 id를 사용하는 URI 생성 불필요
 
 4 . 결과 <br>
-* ![img_69.png](img_69.png)
-* ![img_70.png](img_70.png)
-* ![img_71.png](img_71.png)
+* ![img_69](https://user-images.githubusercontent.com/104918800/175810952-49cc81dc-d27c-40c5-9263-a24c656f2e67.png)
+* ![img_70](https://user-images.githubusercontent.com/104918800/175810953-d3be4e49-c2de-4d53-8f5a-c9a88425198c.png)
+* ![img_71](https://user-images.githubusercontent.com/104918800/175810954-6d05d5be-8642-4fdd-a4a3-824fc6c41aa9.png)
 
 
 <br>
