--- a/ja/_posts/2022-06-21-django10.md
+++ b/ja/_posts/2022-06-21-django10.md
@@ -69,9 +69,9 @@ date: 2022-06-21 12:10:20 +0900
 * model 클래스를 생성할 필요가 없이 UserCreationForm() 폼을 가져다 쓰면 됨
 * 따라서 forms.py도 만들지 않아도 됨
 * 이 친구는 기본 앱에 들어 있음
-  * ![img_74.png](img_74.png)
+  * ![img_74](https://user-images.githubusercontent.com/104918800/175811009-5f9d4f60-3152-4bf8-90fe-76e281bc205e.png)
 * 따라서 맨 처음 migration 할 때부터 들어가 있음
-  * ![img_75.png](img_75.png)
+  * ![img_75](https://user-images.githubusercontent.com/104918800/175811010-0f147a5f-160a-4c52-9318-3228e0cda8b3.png)
 
 ```python
 # Create your views here.
@@ -103,9 +103,9 @@ signup.html
 ```
 
 3 . 중간결과
-* ![img_72.png](img_72.png)
+* ![img_72](https://user-images.githubusercontent.com/104918800/175811006-153e138b-1988-4e7a-9e2d-57d8e0d2e947.png)
 * 참고로 settings.py에서 시간 및 날짜 설정하면
-* ![img_73.png](img_73.png)
+* ![img_73](https://user-images.githubusercontent.com/104918800/175811007-b2f8fb7f-c872-4537-9979-821bc9b8a34e.png)
 <br>
 
 > 장고 언어 및 시간대 설정하기
@@ -134,7 +134,7 @@ signup.html
 ```
 
 5 . 키는 암호화 됨
-* ![img_76.png](img_76.png)
+* ![img_76](https://user-images.githubusercontent.com/104918800/175811012-7ef6bada-7a0b-4213-9442-5610c2c3f895.png)
 
 6 . 회원가입 클래스 상속?
 * DB를 보면 이메일, 미들네임, 스텝여부 등 추가 column 이 있다
@@ -148,7 +148,7 @@ signup.html
 
 로그인을 검증하는 두 가지 방식
 1. 세션(서버 측에 로그인 정보를 저장)
-   * ![img_60.png](img_60.png)
+   * ![img_60](https://user-images.githubusercontent.com/104918800/175811005-439335fc-020e-4986-a810-fc562e16ecd7.png)
    * 서버 컴퓨터의 HDD or 메모리(쿠키)
    * django에서 일반적으로 쓰는 방식
 <br>
@@ -231,7 +231,7 @@ def login(request):
 ```
 
 4 . 로그인 확인해 보기
-* ![img_77.png](img_77.png)
+* ![img_77](https://user-images.githubusercontent.com/104918800/175811013-ebefdba7-eb30-4d80-9cc7-a7f71be109d8.png)
   * 세션 방식이므로 쿠키를 확인해 보면 **sessionid**를 가지고 있는 것을 확인할 수 있다
   * 근데 아직 로그인 여부를 페이지에서 확인할 수가 없음 <br>
 
@@ -279,9 +279,9 @@ def logout(request):
 * path('user/logout', user.views.logout),
 
 3 . 테스트
-* ![img_84.png](img_84.png)
-* ![img_85.png](img_85.png)
-* ![img_86.png](img_86.png)
+* ![img_84](https://user-images.githubusercontent.com/104918800/175811014-0feec304-159c-4b35-b16e-bd7bae05f44d.png)
+* ![img_85](https://user-images.githubusercontent.com/104918800/175811015-9f5d55c1-829e-48b1-ba36-f7aece4a4ef8.png)
+* ![img_86](https://user-images.githubusercontent.com/104918800/175811016-dc5f2c7b-5153-4cad-b634-211ff7c6a237.png)
 
 
 <br>
@@ -321,13 +321,13 @@ python ./manage.py migrate
 ```
 
 3 . 다음과 같이 뜨는 경우
-* ![img_87.png](img_87.png)
+* ![img_87](https://user-images.githubusercontent.com/104918800/175811017-1cde7566-6955-4911-97ff-5256bd05f79b.png)
 * id title contents create_date 네 가지 속성이 있었는데 새로 추가된 writer 속성(컬럼)에는 뭘 넣을지 물어보는 것임
   1. 지금 기본값을 지정을 하되, 아무것도 쓰지 않으면 null값이 기본으로 지정될 것이다
   2. 나중에 수동으로 설정을 하겠다(공백)
 * 1번 선택지 -> 기본키 1인 사용자
 * DB에 다음과 같이 칼럼이 추가 됨
-  * ![img_88.png](img_88.png)
+  * ![img_88](https://user-images.githubusercontent.com/104918800/175811004-d40e8b57-1964-4352-ad6c-2ab46b61fd1c.png)
 
 4 . 로그인 한 사용자만 게시글 작성, 수정, 삭제할 수 있도록 막기(로그인 확인) <br>
 * 데코레이터를 달아 준다: @login_required
