--- a/ja/_posts/2022-06-22-django11.md
+++ b/ja/_posts/2022-06-22-django11.md
@@ -211,8 +211,8 @@ def read(request, bid):
 5. replys.views.py에 create() 함수로 이동되고 실행됨 <br>
 
 5 . 실행 결과
-* ![img_89.png](img_89.png)
-* ![img_90.png](img_90.png)
+* ![img_89](https://user-images.githubusercontent.com/104918800/175811107-c917b722-0cf3-49bc-8883-1b489ed85f7f.png)
+* ![img_90](https://user-images.githubusercontent.com/104918800/175811108-647e3166-4dea-423c-a666-f8f3da92c134.png)
   * 2번 사용자가 46번 게시물에 댓글 단 것을 확인 가능
 
 <br>
@@ -368,7 +368,7 @@ read.html
 ```
 
 5 . 결과
-* ![img_138.png](img_138.png)
+* ![img_138](https://user-images.githubusercontent.com/104918800/175811106-879e0c36-a1ff-4aa8-8a64-cf589d1a8ca9.png)
 
 <br>
 <hr>
