image uploaded to github server

--- a/ja/_posts/2022-06-23-GIT.md
+++ b/ja/_posts/2022-06-23-GIT.md
@@ -56,14 +56,14 @@ date: 2022-06-23 10:22:00 +0900
     * 로컬 저장소: 내 PC에 저장, 나 혼자 쓸 땐 로컬 저장소만 써도 버전 관리 가능
   * 규모가 커지면 github보다는 gitlab을 쓰는 것이 일반적, 큰 회사 가면 자체 레포지토리를 쓰는 것을 볼 수 있음
   * 다음 그림과 같이 문서 충돌의 우려가 없음
-    * ![img_91.png](img_91.png)
+    * ![img_91](https://user-images.githubusercontent.com/104918800/175814870-e30df388-1c81-43c3-bf26-f8641ce885ef.png)
 
 <br>
 
 * Commit
   * 변경을 기록한다 (무언가를 적용시킨다)
   * 원격 레포랑 연결되어 있는 경우, **commit은 내 컴퓨터에 기록을 남기는 것** (push까지 필요)
-  * 다음 형식을 권장한다 <br> ![img_92.png](img_92.png)
+  * 다음 형식을 권장한다 <br> ![img_92](https://user-images.githubusercontent.com/104918800/175814872-11381948-0b96-4699-bb49-aadc0f568598.png)
 
 <br>
 <hr>
@@ -71,10 +71,10 @@ date: 2022-06-23 10:22:00 +0900
 ## 2. GIT 실습 - 초기설정
 1. Git을 설치한다 (기본 설정으로) <br>
 2. C 드라이브에 폴더 생성
-   * ![img_139.png](img_139.png)  <br>
+   * ![img_139](https://user-images.githubusercontent.com/104918800/175814869-03277368-8d0a-487a-85d0-146fce70147b.png)  <br>
 3. 우클릭, git bash here <br>
 4. 리눅스의 bash shell이 뜰 것임 (깃을 설치하며 깃에 해당 셸이 설치됨)
-   * ![img_93.png](img_93.png)  <br>
+   * ![img_93](https://user-images.githubusercontent.com/104918800/175814873-243190d4-5244-48b1-ab32-755f6e6d07a8.png)  <br>
 5. 초기 설정
    * 아래 명령어는 설정들을 git에 전달한다
    * git config --global user.name "<passionleader>"
@@ -98,7 +98,7 @@ date: 2022-06-23 10:22:00 +0900
 
 2. git add
    * txt 파일을 하나 생성해서 막 적어본다
-   * ![img_94.png](img_94.png)
+   * ![img_94](https://user-images.githubusercontent.com/104918800/175814875-c2c37a10-e59a-48be-9bcc-7c7c03dac4cd.png)
    * git add test.txt 혹은 git add .(점: 전체)
    * 아직 커밋을 진행한 것은 아님 <br>
 
@@ -106,7 +106,7 @@ date: 2022-06-23 10:22:00 +0900
    * 상태를 확인해 보기 위해 다음을 입력
    * git status
    * 새로운 파일이 생겼구나!를 알 수 있다
-   * ![img_95.png](img_95.png)  <br>
+   * ![img_95](https://user-images.githubusercontent.com/104918800/175814876-e1111957-b4df-42d7-aa6d-bece858fc095.png)  <br>
 
 4. git commit
    * 커밋을 함, 어떤 작업을 했는지 적는다
@@ -116,16 +116,16 @@ date: 2022-06-23 10:22:00 +0900
 5. git log
    * git log 입력해 보면 commit 한 이력이 나온다
    * 커밋 이력을 확인해 볼 수 있다
-   * ![img_96.png](img_96.png) <br>
+   * ![img_96](https://user-images.githubusercontent.com/104918800/175814877-ea43e11c-14e4-4436-911c-16a0186fc64e.png) <br>
 
 6. 연습: 이제 파일을 수정해 보자
    * 내용을 추가한다
-     * ![img_97.png](img_97.png)
+     * ![img_97](https://user-images.githubusercontent.com/104918800/175814878-70e94894-b7a8-4357-8396-51e742191f5d.png)
    * 이 상태에서 git status 입력하면 수정할 게 있다고 나옴
-     * ![img_98.png](img_98.png)
+     * ![img_98](https://user-images.githubusercontent.com/104918800/175814879-62af9317-688b-413d-84d9-36874caaee00.png)
    * git add -> git commit 수행!
    * git log 확인해 보면 생성한거, 수정한거 모두 확인 가능
-   * ![img_99.png](img_99.png) <br>
+   * ![img_99](https://user-images.githubusercontent.com/104918800/175814880-d610e759-3b62-410d-be3e-22c7161a2219.png) <br>
 
 <br>
 <hr>
@@ -133,7 +133,7 @@ date: 2022-06-23 10:22:00 +0900
 ## 4. GIT 실습 - github 연동
 1. 깃에 깃허브 연동하기
   * 레포 주소 복사
-    * ![img_100.png](img_100.png)
+    * ![img_100](https://user-images.githubusercontent.com/104918800/175814881-000d7678-5972-4527-9444-5a348a676c89.png)
   * 원격 저장소(원본) 이름을 지정후 연동한다 (이름을 origin이라고 지정할 경우)
     * git remote add origin https://github.com/passionleader/tutorial.git  <br>
 
@@ -146,7 +146,7 @@ date: 2022-06-23 10:22:00 +0900
 
 3. 연결된 곳 확인해 보기
   * git remote -v
-  * ![img_103.png](img_103.png) <br>
+  * ![img_103](https://user-images.githubusercontent.com/104918800/175814882-1b9d0077-13eb-49b9-a9d7-ebe9e20d4f65.png) <br>
 
 4. 주의사항
   * DB 주소, 암호 등이 적혀있는 파일의 경우 git ignore을 통해 숨겨야 함(업로드X) <br>
@@ -179,10 +179,10 @@ date: 2022-06-23 10:22:00 +0900
 
 2 . 서로 다른 PC에서 **동시에** 동일한 파일을 수정한 뒤 commit/push 하는 경우
 * 상황
-  * ![img_104.png](img_104.png)
+  * ![img_104](https://user-images.githubusercontent.com/104918800/175814884-dd4ec48c-f569-44a8-b736-4d9b1f219f01.png)
   * hehehe를 먼저 푸시
   * hahaha를 뒤늦게 푸시할 때, 다음과 같은 오류 발생
-  * ![img_105.png](img_105.png)
+  * ![img_105](https://user-images.githubusercontent.com/104918800/175814885-663f1d6c-cf5f-4ea9-a415-09e891766ee4.png)
   * 이런 경우 어떻게 해야 할까?
 
 <br>
@@ -190,13 +190,13 @@ date: 2022-06-23 10:22:00 +0900
 * 해결시도
   * 뒤늦게 푸시하려는 hahaha를 푸시하기 전에 git pull을 시도한다
   * 안내 메시지가 뜸 (니가 작업한 hahaha는 먼저 들어온 hehehe랑 달라서 어떻게 할지 모르겠다)
-    * ![img_106.png](img_106.png)
+    * ![img_106](https://user-images.githubusercontent.com/104918800/175814863-c9ec0821-dcc6-41f1-a8b2-cb094b4ebfc9.png)
   * 곧바로 파일을 확인한 경우 둘중에 고르라고 친절하게 파일에 표시를 해줌
-    * ![img_107.png](img_107.png)
+    * ![img_107](https://user-images.githubusercontent.com/104918800/175814864-0e431a3c-80dc-40ec-a458-150c5560d323.png)
   * 자동으로 합쳐지는 것을 아니고, 수동으로 해야 함
   * 불필요한 단어를 다 지우면 둘다 남게 되고
-    * ![img_108.png](img_108.png)
+    * ![img_108](https://user-images.githubusercontent.com/104918800/175814866-5e7877a7-c855-4e1a-ab50-785167158a55.png)
   * 이 상태에서 commit, push를 수행하면 된다
-    * ![img_109.png](img_109.png)
+    * ![img_109](https://user-images.githubusercontent.com/104918800/175814867-370d43c5-3f27-407c-b439-de6007967f66.png)
 
 > 하나의 브랜치로 작업하면 이런 문제가 생기기 쉬움, 실무에서는 사람별로 브랜치를 나누는 것이 좋음
