--- a/ja/_posts/2022-06-23-django14.md
+++ b/ja/_posts/2022-06-23-django14.md
@@ -124,10 +124,10 @@ DATABASES = {
 <br>
 
 * 일단 아무거나 수정하고 버튼 누르기. (여기서 commit할 때 바뀐애들을 자동으로 add 해줌)
-  * ![img_110.png](img_110.png)
+  * ![img_110](https://user-images.githubusercontent.com/104918800/175814969-bd3385d8-fe18-47ef-9b6c-fcaa7d956443.png)
 * add 하고 싶지 않으면 체크해제하면 됨
-  * ![img_111.png](img_111.png)
+  * ![img_111](https://user-images.githubusercontent.com/104918800/175814970-99b6ecb7-3f18-4c7f-9608-1c9ee220266c.png)
 * 메시지를 적고 커밋 앤 푸시~
-  * ![img_112.png](img_112.png)
+  * ![img_112](https://user-images.githubusercontent.com/104918800/175814967-9be516f6-23ca-4e20-a6c0-e5b20e513c9e.png)
 
 
