--- a/ja/_posts/2022-05-11-ssafy.md
+++ b/ja/_posts/2022-05-11-ssafy.md
@@ -10,8 +10,8 @@ title: 가상 컴퓨터에서 SSAFY 지원하기
 #author: initializer
 
 # 카테고리와 태그 설정
-category: 정보
-tags: [기타국비지원]
+category: 회고록
+tags: [취업준비]
 
 # 섬네일 이미지
 img: ":ssafy.jpg"
