--- a/ja/_posts/2022-06-06-DNSOver.md
+++ b/ja/_posts/2022-06-06-DNSOver.md
@@ -10,8 +10,8 @@ title: DNS의 암호화 방법
 #author: initializer
 
 # 카테고리와 태그 설정
-category: 네트워크
-tags: [공부]
+category: 개인공부
+tags: [network]
 
 # 섬네일 이미지
 img: "https://user-images.githubusercontent.com/104918800/172131455-309bc99c-8e17-421b-afe7-318244f24e85.png"
@@ -59,10 +59,10 @@ date: 2022-06-06 18:05:00 +0900
 * 하단 UDP의 통신 방법을 확인하면 위험하구나~ 를 알 수 있음
 
 <br>
-  
+
 #### UDP 통신?
-간단하게 보면 다음 그림과 같다! <br> 
-![img.png](https://c.tenor.com/GqheddsG2tAAAAAC/newspaper-in-face-trash.gif) <br>  
+간단하게 보면 다음 그림과 같다! <br>
+![img.png](https://c.tenor.com/GqheddsG2tAAAAAC/newspaper-in-face-trash.gif) <br>
 누가 일주일 전에 뿌린 신문에 우연히 맞아서 읽는 것..
 
 <br>
@@ -98,7 +98,7 @@ date: 2022-06-06 18:05:00 +0900
 * DNS over TLS
 * DNS over HTTPS
 
-<br> 
+<br>
 
 다음 시간에 계속~
 아직 작성중이라 계속 수정할 예정
