--- a/ja/_posts/2022-06-13-python___.md
+++ b/ja/_posts/2022-06-13-python___.md
@@ -10,8 +10,8 @@ title: 파이썬 기초
 #author: initializer
 
 # 카테고리와 태그 설정
-category: python
-tags: [카카오클라우드스쿨]
+category: 카카오클라우드스쿨
+tags: [python]
 
 # 섬네일 이미지
 img: "https://images.velog.io/post-images/doondoony/d72cb4c0-cfbd-11e8-b93f-579a7dec4e42/1200px-Python.svg.png"
