--- a/ja/_posts/2022-06-14-ctest___.md
+++ b/ja/_posts/2022-06-14-ctest___.md
@@ -10,8 +10,8 @@ title: 파이썬 코딩테스트 연습
 #author: initializer
 
 # 카테고리와 태그 설정
-category: ctest
-tags: [카카오클라우드스쿨]
+category: 카카오클라우드스쿨
+tags: [coding_test, python]
 
 # 섬네일 이미지
 img: "https://www.digicast-technologies.com/wp-content/uploads/2021/05/Coding-Tests-digicasttechnologies.com_-780x408.jpeg"
