--- a/ja/_posts/2022-06-16-network.md
+++ b/ja/_posts/2022-06-16-network.md
@@ -10,8 +10,8 @@ title: 네트워크 빠르게 훑어 보기(2)
 #author: initializer
 
 # 카테고리와 태그 설정
-category: 네트워크
-tags: [카카오클라우드스쿨]
+category: 카카오클라우드스쿨
+tags: [network]
 
 # 섬네일 이미지
 img: "https://blog.kakaocdn.net/dn/o2Adz/btqxvL4a2WT/E7TxUqr5gddH3TgGpqZVU1/img.jpg"
