--- a/ja/_posts/2022-06-22-django12__.md
+++ b/ja/_posts/2022-06-22-django12__.md
@@ -10,8 +10,8 @@ title: django 12 - 페이지 꾸미기 (Static)
 #author: initializer
 
 # 카테고리와 태그 설정
-category: css
-tags: [카카오클라우드스쿨]
+category: 카카오클라우드스쿨
+tags: [css, html]
 
 # 섬네일 이미지
 img: "https://assets.startbootstrap.com/img/screenshots/themes/agency.png"
