--- a/ja/_posts/2022-06-12-kakao___.md
+++ b/ja/_posts/2022-06-12-kakao___.md
@@ -10,8 +10,8 @@ title: 카카오 클라우드 스쿨 1기 합격
 #author: initializer
 
 # 카테고리와 태그 설정
-category: 회고록
-tags: [카카오클라우드스쿨]
+category: 카카오클라우드스쿨
+tags: [회고록, 취업준비]
 
 # 섬네일 이미지
 img: "https://www.techm.kr/news/photo/202205/97079_111150_4335.jpeg"
