--- a/ja/_posts/2022-06-20-django8.md
+++ b/ja/_posts/2022-06-20-django8.md
@@ -10,8 +10,8 @@ title: django 8 - 게시판 코드 수정(최적화)
 #author: initializer
 
 # 카테고리와 태그 설정
-category: django
-tags: [카카오클라우드스쿨]
+category: 카카오클라우드스쿨
+tags: [django]
 
 # 섬네일 이미지
 img: "https://repository-images.githubusercontent.com/253698085/cce90300-78c3-11ea-8b94-604fad2c516d"
