Image Uploaded to github server

--- a/ja/_posts/2022-07-06-AWS.md
+++ b/ja/_posts/2022-07-06-AWS.md
@@ -45,7 +45,7 @@ date: 2022-07-06 17:03:22 +0900
 # 뜬금없는 AWS 기초실습
 
 ## VPC
-* ![img_189.png](img_189.png)
+* ![img_189](https://user-images.githubusercontent.com/104918800/178190185-ce7cb8d9-4c4e-4d06-a58f-b439d8d65695.png)
 * VPC 내부에 다양한 서버를 분산해서 구성할 수 있다
 * 이 경우 다음과 같은 장점이 있다
   * 보안에 좋다!(각 서버별로 방화벽 사용)
@@ -71,18 +71,18 @@ date: 2022-07-06 17:03:22 +0900
 <hr>
 
 ## 인스턴스 생성해 보기
-* ![img_190.png](img_190.png)
-* 클라우드 이미지? <br> ![img_273.png](img_273.png)
-* ![img_191.png](img_191.png)
+* ![img_190](https://user-images.githubusercontent.com/104918800/178190188-1d57c916-e6af-488e-94f6-19085d51050d.png)
+* 클라우드 이미지? <br> ![img_273](https://user-images.githubusercontent.com/104918800/178200233-0176ebdb-dc83-40be-9f69-417cec40ba82.png)
+* ![img_191](https://user-images.githubusercontent.com/104918800/178190190-8ec29ec5-f62f-4c28-93a5-f58085e1aa13.png)
 * 과금 안되게 EC2 생성 후
 * Elastic IP 할당 함
-* ![img_192.png](img_192.png)
+* ![img_192](https://user-images.githubusercontent.com/104918800/178190191-adc0b39b-5d0c-4f38-88c3-42dd1515a294.png)
 * 동일할 것임
-* ![img_195.png](img_195.png)
+* ![img_195](https://user-images.githubusercontent.com/104918800/178190197-ed647b24-7d74-49dc-87d0-6c26c48f845b.png)
 * 근데 핑이 안 보내짐
-* ![img_194.png](img_194.png)
+* ![img_194](https://user-images.githubusercontent.com/104918800/178190196-b505ed4c-beea-4685-92ec-ff7086a5166d.png)
 * 보안 그룹 설정함 - 인바운드 규칙 수정
-* ![img_196.png](img_196.png)
+* ![img_196](https://user-images.githubusercontent.com/104918800/178190200-2c0cdd8d-440e-4914-a43e-f40bf43b383b.png)
 * 이제 핑 잘 보내짐
 <br>
 
