--- a/ja/_posts/2022-07-06-OSI7.md
+++ b/ja/_posts/2022-07-06-OSI7.md
@@ -59,7 +59,7 @@ date: 2022-07-06 09:03:22 +0900
 * Open vSwitch
   * A virtual multilayer network switch
   * 서버를 묶어서 관리하거나, 고립시킬 수 있음
-  * ![img_117.png](img_117.png)
+  * ![img_117](https://user-images.githubusercontent.com/104918800/178190045-7af27ed0-453b-4da5-9af9-2384c696628d.png)
 
 <br>
 
@@ -72,7 +72,7 @@ date: 2022-07-06 09:03:22 +0900
 <hr>
 
 ## 현재까지의 네트워킹 아키텍쳐
-* ![img_219.png](img_219.png)
+* ![img_219](https://user-images.githubusercontent.com/104918800/178200026-64bf6f94-7958-4c7d-96df-15227433baac.png)
 
 <br>
 <hr>
@@ -80,19 +80,19 @@ date: 2022-07-06 09:03:22 +0900
 ## 회사 내부망 구성 방법
 * LAN: Local Area Network
 * WAN: Wide Area Network
-* ![img_220.png](img_220.png)
-* ![img_221.png](img_221.png)
+* ![img_220](https://user-images.githubusercontent.com/104918800/178200028-3734da51-88f9-4ce8-905e-9e4928f79ddf.png)
+* ![img_221](https://user-images.githubusercontent.com/104918800/178200032-e59c53a5-435a-44eb-a67a-fa44b669d058.png)
 
 <br>
 <hr>
 
 ## OSI 7 Layers
-* ![img_198.png](img_198.png)
+* ![img_198](https://user-images.githubusercontent.com/104918800/178190205-0c5455b1-4e93-4ffa-8131-2e81f71e4b55.png)
   * 데이터가 전송될 때 bit -> frame -> packet -> segment -> data 순서로 까지게 된다
 
 * Router
   * L3를 해석한다: IP를 해석한다: **Router**
-  * ![img_200.png](img_200.png)
+  * ![img_200](https://user-images.githubusercontent.com/104918800/178254178-b737a011-be83-4379-b349-979af1e68201.png)
     * 네트워크간 통신
 
 * Switch
@@ -104,7 +104,7 @@ date: 2022-07-06 09:03:22 +0900
 
 * 로드밸런서
   * 외부 네트워크와 서버, 애플리케이션 사이에 로드밸런서가 작동
-    * ![img_199.png](img_199.png)
+    * ![img_199](https://user-images.githubusercontent.com/104918800/178190208-35312497-566b-4b37-af6c-8bb7b5b58297.png)
   * NLB
     * L4의 PDU(segment) 중 포트번호를 확인하고 트래픽 부하를 분산하는 방식
     * L4 네트워크 계층(TCP/UDP 계층)에서 동작
@@ -112,7 +112,7 @@ date: 2022-07-06 09:03:22 +0900
   * ALB
     * L7(data)의 주소를 보고 부하를 분산하는 방식
     * 주소를 확인하고 각 애플리케이션으로 라우팅한다
-      * ![img_119.png](img_119.png)
+      * ![img_119](https://user-images.githubusercontent.com/104918800/178190047-7843094a-9831-41d9-9119-e0202fb4bac6.png)
     * 경로 기반 라우팅이 지원됨
       * 이렇게 하면 개발하기 수월해짐(쿠버네티스 ingress와 유사)
 
@@ -120,12 +120,12 @@ date: 2022-07-06 09:03:22 +0900
 <br>
 
 * TCP/IP
-  * ![img_120.png](img_120.png)
+  * ![img_120](https://user-images.githubusercontent.com/104918800/178190048-2c2828ad-43b9-4c70-b597-c574b2fb79c8.png)
 
 <br>
 
 > AWS에서 다중 AZ 구성 방법
-* ![img_222.png](img_222.png)
+* ![img_222](https://user-images.githubusercontent.com/104918800/178200036-03f6c6f0-64b3-40bf-aad3-80e23f068e6b.png)
 
 
 
