--- a/ja/_posts/2022-07-07-IP.md
+++ b/ja/_posts/2022-07-07-IP.md
@@ -46,7 +46,7 @@ date: 2022-07-07 14:03:22 +0900
 # IP (Internet Protocol)
 ## 기본 개념
 * ip: internet protocol
-* ![img_260.png](img_260.png)
+* ![img_260](https://user-images.githubusercontent.com/104918800/178200200-5c942ca1-e58d-49c8-8994-3bb7d6ae7a1a.png)
   * 혼자 쓸 때가 아닌, 상호통신을 위해 필요한 통신규약 (통신언어)
 * IPv4(32bit), IPv6(128bit) 두 개로 구분이 가능하다
 
@@ -58,7 +58,7 @@ date: 2022-07-07 14:03:22 +0900
 <br>
 
 * IPv4
-  * ![img_261.png](img_261.png)
+  * ![img_261](https://user-images.githubusercontent.com/104918800/178200206-f52836da-9ec1-4479-a09a-5b13a5c7972d.png)
   * 4개의 옥텟(bit)으로 구성되어 있다.
     * 8bit x 4 = 32 bit
     * 00000000.00000000.00000000.00000000
@@ -86,11 +86,11 @@ date: 2022-07-07 14:03:22 +0900
 
 * 서브넷 마스크 및 서브넷팅
   * 서브넷 마스크
-    * ![img_264.png](img_264.png)
+    * ![img_264](https://user-images.githubusercontent.com/104918800/178200213-a57c55b6-d684-4a02-bb72-58ebe22715fa.png)
   * IP주소와 Subnet mask까지 봐야지 같은 네트워크인지 확인 할 수 있다
     * 255.255.0.0일때, 1.1.2.3과 1.1.211.30은 같은 네트워크 범위임
   * 서브넷팅
-    * ![img_265.png](img_265.png)
+    * ![img_265](https://user-images.githubusercontent.com/104918800/178200214-c786e857-5fd8-4e3e-8dda-154dddfe0353.png)
 
 <br>
 
@@ -114,10 +114,10 @@ date: 2022-07-07 14:03:22 +0900
 <br>
 
 * 연습문제
-  * ![img_263.png](img_263.png)
+  * ![img_263](https://user-images.githubusercontent.com/104918800/178200212-67b2ee9c-e0e6-4f85-a7df-51c3cd24d14c.png)
 
 * 참고하면 좋음
-  * ![img_259.png](img_259.png)
+  * ![img_259](https://user-images.githubusercontent.com/104918800/178200199-ae91b871-4cd8-4843-bb88-f8d612a3b051.png)
 
 <br>
 <hr>
@@ -132,4 +132,4 @@ date: 2022-07-07 14:03:22 +0900
 <br>
 
 * DHCP 프로토콜의 작동 방식
-* ![img_276.png](img_276.png)
+* ![img_276](https://user-images.githubusercontent.com/104918800/178200241-c21da115-f264-4964-9bcb-4331869e1add.png)
