--- a/ja/_posts/2022-07-08-AWS.md
+++ b/ja/_posts/2022-07-08-AWS.md
@@ -55,7 +55,7 @@ date: 2022-07-08 18:03:22 +0900
 <br>
 
 * EC2 Auto Scaling 구성 예시
-  - ![img_277.png](img_277.png)
+  - ![img_277](https://user-images.githubusercontent.com/104918800/178200242-f55ce013-96df-4aff-b2d1-1bb8d8f514e9.png)
   - Auto Scaling의 최소 그룹의 크기: 1
     - (적어도 하나 이상의 인스턴스는 항상 실행 중이어야 함)
   - 희망 용량 그룹: 최소 용량과 별개로 희망 용량 지정, 미지정시 최소 용량
@@ -83,7 +83,7 @@ date: 2022-07-08 18:03:22 +0900
 <br>
 
 * ELB (Elastic Load Balancing)
-  - ![img_278.png](img_278.png)
+  - ![img_278](https://user-images.githubusercontent.com/104918800/178200243-a39e1b74-ff68-49aa-b569-73b6b3c91a33.png)
   - Elastic Load Balancing 및 EC2 Auto Scaling은 별도의 서비스이지만, 서로 연동 가능
   - Auto Scaling은 수요에 따른 인스턴스 수를 자동으로 조정하고, ELB는 (Auto Scaling이 조정한 인스턴스들에 대해) 트래픽을 골고루 분배한다 (차이 알아 두기)
   - Regional Construct (리전 구조, 추후 학습) > 사용자의 작업 없이 자동으로 고가용 서비스 구축 가능
@@ -92,12 +92,12 @@ date: 2022-07-08 18:03:22 +0900
 
 * ELB의 작동 방식
   - 외부 트래픽에서의 작동
-  - ![img_280.png](img_280.png)
+  - ![img_280](https://user-images.githubusercontent.com/104918800/178200246-bc6d8d5c-4bca-489d-a57d-54315dfb6e68.png)
     - 트래픽 증가 > ELB의 자동 확장 기능으로 트래픽 전부 수렴 > Autoscaling 작동하여 추가 EC2 작동 > 추가 EC2가 온라인이 되면 Autoscaling은 ELB에 준비됨을 알림 > ELB는 추가 EC2를 포함한 전체 EC2에 균일하게 트래픽 분배
     - 트래픽이 감소 > ELB는 이미 들어온 요청이 완료될 때까지 신규 트래픽을 중지 > 기존 요청이 완료되면 Autoscaling은 추가 EC2를 종료 > Autoscaling은 기존 트래픽의 중단 없이 필요 없는 인스턴스(EC2)를 종료할 수 있게 됨
 
  - 내부 트래픽(Backend-Frontend 사이)에서의 작동
- - ![img_281.png](img_281.png) -> ![img_282.png](img_282.png)
+ - ![img_281](https://user-images.githubusercontent.com/104918800/178200247-383487b7-5b50-4c0a-ae7e-bd6c36ea517e.png) -> ![img_282](https://user-images.githubusercontent.com/104918800/178200248-f5da06a2-8e10-45c6-af98-25fecaf8f2f0.png)
    - autoscaling only -> use ELB
    - 기존의 경우: 모든 Frontend는 모든 Backend를 인지하고 있어야 함(효율적인 인스턴스 유지 불가)
    - ELB 사용 시: 트래픽 관리를 알아서 조정해 줌, Frontend는 실행 중인 Backend를 인지할 필요 없음
@@ -170,7 +170,7 @@ date: 2022-07-08 18:03:22 +0900
 <br>
 
 - 내가 그린 그림으로 한눈에 이해해 보자
-- ![img_283.png](img_283.png)
+- ![img_283](https://user-images.githubusercontent.com/104918800/178200249-a8b2bd08-be38-4d55-83ad-90bd9ff654af.png)
 
 
 <br>
@@ -190,7 +190,7 @@ date: 2022-07-08 18:03:22 +0900
 <br>
 
 * 인터넷 게이트웨이(IGW)
-* ![img_284.png](img_284.png)
+* ![img_284](https://user-images.githubusercontent.com/104918800/178200251-8d5a521a-5a62-4979-b15e-dc3ab73be172.png)
   - VPC에 공개 트래픽이 출입하도록 하려면 게이트웨이가 필요
   - 인터넷 게이트웨이가 없다면, 아무도 VPC 안의 리소스에 접근할 수 없다
   - 대중에게 공개된 접속 출입구(카페 정문)
@@ -198,7 +198,7 @@ date: 2022-07-08 18:03:22 +0900
 <br>
 
 * 가상 프라이빗 게이트웨이
-* ![img_285.png](img_285.png)
+* ![img_285](https://user-images.githubusercontent.com/104918800/178200253-dd761257-e2e3-4a40-8bb6-3085fa4076c5.png)
   - VPC에 승인된 사람만 허용(비공개 출입구)
   - 비공개, 암호화 기능
   - 사내 네트워크 같은 VPC에 VPN 연결을 만들 수도 있다
@@ -206,7 +206,7 @@ date: 2022-07-08 18:03:22 +0900
 <br>
 
 * AWS Direct Connect
-* ![img_286.png](img_286.png)
+* ![img_286](https://user-images.githubusercontent.com/104918800/178200256-958d5c09-5967-4677-b628-3bc59fa0003a.png)
   - 가상 프라이빗 네트워크만 쓰면, 여전히 퍼블릭 트래픽과 같은 대역폭 연결을 쓰게 됨 <br> -> 다른 사람과 공유되지 않는 전용 연결이 필요
   - 짧은 지연 시연과, 높은 수준의 보안, 대역폭 문제 해결, 규정 준수 사항 충족
   - 물리적인 광섬유 회선을 제공하여 완전한 비공개 연결을 구축 가능
@@ -215,7 +215,7 @@ date: 2022-07-08 18:03:22 +0900
 <br>
 
 * 단일 VPC에 여러 유형의 리소스를 위한 **여러 유형의 게이트웨이가 존재할 수도 있다**
-* ![img_287.png](img_287.png)
+* ![img_287](https://user-images.githubusercontent.com/104918800/178200258-c0ccdfd6-660f-4129-87c1-40d872b52fb9.png)
   - 왜냐하면 VPC 내부에 다양한 서브넷이 존재하거든
 
 <br>
@@ -233,7 +233,7 @@ date: 2022-07-08 18:03:22 +0900
 <br>
 
 * (서브넷 내부에서)인스턴스의 보안
-* ![img_288.png](img_288.png)
+* ![img_288](https://user-images.githubusercontent.com/104918800/178200260-846c13c7-4737-41a7-80ff-bc110882e7ac.png)
   - 보안 그룹(Security Group)
   - 인스턴스에 들어오는 패킷(트래픽)을 검사함
   - Stateful(상태 저장) 패킷 필터링: 한번 들어온 패킷에 대해 기억해 둠 <br>
@@ -244,14 +244,14 @@ date: 2022-07-08 18:03:22 +0900
 <br>
 
 * 전체적인 보안 구조
-* ![img_289.png](img_289.png)
+* ![img_289](https://user-images.githubusercontent.com/104918800/178200264-a580412e-007a-4c94-977e-854dab6df516.png)
   - 구조 <br>
   (게이트웨이) – VPC – (네트워크ACL) – 서브넷 – (보안 그룹) – 인스턴스
 
 <br>
 
 * 예시
-* ![img_290.png](img_290.png)
+* ![img_290](https://user-images.githubusercontent.com/104918800/178200266-32635748-d261-4bfb-8695-c579be9e45c7.png)
   - VPC 내부에서의 패킷 전송 예시: 인스턴스 A에서, 인스턴스 B로 보내고 싶다
   - 인스턴스 A의 보안 그룹: 나가는 패킷은 기본적으로 통과 가능
     - 서브넷 1의 네트워크ACL: 유출 허용 목록을 확인한 뒤, 내보내 줌 (1과 2의 허용 목록은 다름)
