--- a/ja/_posts/2022-07-11-ACL.md
+++ b/ja/_posts/2022-07-11-ACL.md
@@ -45,13 +45,13 @@ date: 2022-07-11 17:09:10 +0900
 <br>
 
 * 클라우드의 서브넷팅은 다음과 같은 연결로 구성된다
-* ![img_311.png](img_311.png)
+* ![img_311](https://user-images.githubusercontent.com/104918800/178251058-72d12b62-2bc4-45e5-b2d6-385a8579cc7f.png)
   * 여기서, '보안 설정'이란 무엇일까?
 
 <br>
 
 * 또한, 라우터 내부에서는 다음과 같은 일들이 일어난다
-* ![img_312.png](img_312.png)
+* ![img_312](https://user-images.githubusercontent.com/104918800/178251059-03a8ce02-ee72-4a00-9b64-4f55e232dffe.png)
   * ACL이 위와 같은 '보안 설정'을 진행해 준다는 것을 알 수 있다
 
 <br>
@@ -81,7 +81,7 @@ date: 2022-07-11 17:09:10 +0900
 
 ## ACL 작성 방법
 
-![img_313.png](img_313.png)
+![img_313](https://user-images.githubusercontent.com/104918800/178251097-6fad78f0-9b60-4e58-a48d-61e00df808a9.png)
 
 * Standatd ACL
   * Standard 는 특정 IP 주소로부터의 모든 접근에 대하여 허용 또는 차단으로만 구분할 수 있다
