--- a/ja/_posts/2022-07-11-VLAN.md
+++ b/ja/_posts/2022-07-11-VLAN.md
@@ -46,14 +46,14 @@ date: 2022-07-11 13:12:20 +0900
 
 ## Switch
   * Vlan은 Switch 내부에서 작동한다
-    * ![img_271.png](img_271.png) <br><br>
+    * ![img_271](https://user-images.githubusercontent.com/104918800/178200228-ca175e58-5bc1-4714-ab49-39a8570a4eb6.png) <br><br>
   * Switch 내부에서의 동작 과정
-    * ![img_272.png](img_272.png) <br><br>
+    * ![img_272](https://user-images.githubusercontent.com/104918800/178200230-e5f9aee6-83af-41ae-b4dd-6ec008e2b3db.png) <br><br>
 
 
   * VLAN을 이용하면 동일 스위치 내에 있는 인터페이스들에 대하여 논리적인 grouping이 가능하며, 이는 별도의 네트워크로 동작하게 된다.
   * 별도의 vlan은 별도의 네트워크이므로 하나의 vlan에서 발생하는 broadcast는 다른 valn에 영향을 미치지 않는다
-  * ![img_270.png](img_270.png)
+  * ![img_270](https://user-images.githubusercontent.com/104918800/178200225-c3a486a6-dc4a-42d2-b244-96b17b3c939f.png)
 <br>
 <hr>
 
@@ -66,13 +66,13 @@ date: 2022-07-11 13:12:20 +0900
   * Switch를 이용해서 구현할 수 있다 <br><br>
 
   * 하나의 논리적인 네트워크에 있는 VLAN & 다른 물리적인 네트워크에 있는 VLAN => 서로 관계가 없다
-    * ![img_291.png](img_291.png)
+    * ![img_291](https://user-images.githubusercontent.com/104918800/178200268-6455c823-0bef-4cca-b043-621ee6c09d83.png)
   * 클라우드에서 구성할 때, VXLAN을 통해 다른 VLAN을 연결시킬 수는 있다
-    * ![img_304.png](img_304.png) <br><br>
+    * ![img_304](https://user-images.githubusercontent.com/104918800/178251037-618b1a10-f5db-426f-a8db-e89c469c95da.png) <br><br>
 
   * 여러 개의 VLAN을 사용할 수 있다
     * 즉, 하나의 스위치 안에 여러 개의 네트워크가 동시에 존재할 수 있다!
-    * ![img_305.png](img_305.png) <br><br>
+    * ![img_305](https://user-images.githubusercontent.com/104918800/178251042-dc5d9e96-aee4-4707-a205-33af3666b83c.png) <br><br>
 
   * 라우터와 차이점
     * Router = 1 interface = 1 network = 1 broadcast domain
@@ -84,12 +84,12 @@ date: 2022-07-11 13:12:20 +0900
 
 VLAN으로 보는 이점 <br>
 * 1개의 네트워크를 사용하게 될 경우의 단점
-  * ![img_293.png](img_293.png)
+  * ![img_293](https://user-images.githubusercontent.com/104918800/178200272-181c665f-d1e4-4131-aa98-ec3df2845696.png)
   * 불필요한 브로드캐스트가 확산될 수 있다
   * 보안상의 결함의 가능하다 <br><br>
 
 * VLAN을 사용하면 좋은 점
-  * ![img_295.png](img_295.png)
+  * ![img_295](https://user-images.githubusercontent.com/104918800/178200276-7edbfbb8-4afb-4e29-bc55-61bd8df375fd.png)
   * 같은 팀에 접근이 용이함
   * 필요한 만큼 논리적으로 네트워크를 구분할 수 있다
   * 논리적이므로
@@ -128,13 +128,13 @@ VLAN 사용하기 <br>
 
 ## Switch의 Port
 
-* ![img_306.png](img_306.png)
+* ![img_306](https://user-images.githubusercontent.com/104918800/178251045-89d3e18c-482d-4afb-9966-7837ab22fb72.png)
 
 <br>
 
 2. Access port
 3. Trunk port
-   * ![img_309.png](img_309.png)
+   * ![img_309](https://user-images.githubusercontent.com/104918800/178251051-3bcf5876-6bdc-49a3-8f9b-565a6e727279.png)
    * 기본적으로 모든 vlan 통신이 가능한 인터페이스!
    * IEEE 802.1q로 표준화 되어 있어, 스위치 제조사가 서로 달라도 호환된다
      * 따라서 물리 스위치, 가상 스위치 간에 통신도 가능하다
