--- a/ja/_posts/2022-07-05-vnic.md
+++ b/ja/_posts/2022-07-05-vnic.md
@@ -49,9 +49,9 @@ date: 2022-07-05 12:03:22 +0900
 
 ## 1. 네트워크 인터페이스(개념)
 * NIC의 가상화 방법
-  * ![img_73.png](img_73.png)
+  * ![img_73](https://user-images.githubusercontent.com/104918800/177329536-e7c3891b-0a41-4673-96e0-ad519a8a873b.png)
   * VM ware는 OS 커널의 허락을 받아서 Physical NIC의 자원을 조금 할당받는다 <br> <br>
-* vNIC의 세 가지 종류 <br> ![img_79.png](img_79.png) <br> ![img_201.png](img_201.png)
+* vNIC의 세 가지 종류 <br> ![img_79](https://user-images.githubusercontent.com/104918800/177329553-8b99cf50-86b8-4a82-aadc-0a5d9b751e6b.png) <br> ![img_201](https://user-images.githubusercontent.com/104918800/178199994-b51a3b5d-965a-4de4-bc49-10912a7246fa.png)
   1. host-only(isolated)
      * 내부 주소 대역들 끼리만 통신이 가능함
      * 외부와는 통신이 불가능(인터넷 사용 불가)
@@ -69,14 +69,14 @@ date: 2022-07-05 12:03:22 +0900
 <br>
 
 * 강의실의 네트워크 현황
-  * ![img_202.png](img_202.png)
+  * ![img_202](https://user-images.githubusercontent.com/104918800/178199999-6c1a4972-b45c-493c-812d-7a21d40305bf.png)
 
 <br>
 <hr>
 
 
 ## 2. 웹서버 접속 과정(개념)
-![img_107.png](img_107.png)
+![img_107](https://user-images.githubusercontent.com/104918800/177329630-1b41ae19-1570-4d03-8e19-52a89efdbad2.png)
 
 <br>
 <hr>
@@ -100,12 +100,12 @@ date: 2022-07-05 12:03:22 +0900
 * NAT(network address translateion)
   * 사설 IP 주소 하나를 특정 공인 IP 주소로 변경하는 것
   * 동적 NAT과 정적 NAT으로 구분된다
-  * ![img_108.png](img_108.png)
+  * ![img_108](https://user-images.githubusercontent.com/104918800/177329632-b8f0e623-5322-4b3a-8e64-94cdd49f150a.png)
 * PAT(port address translation)
   * 공인주소가 1개인 경우 다수의 사설 주소가 한 개의 공인 주소를 공유하여 주소 변경을 하고자 하는 경우에 사용하는 방법
   * 동적 PAT: IP는 고정되어 있는데 포트는 지정해주지 않고 유동적으로 한다면 동적 PAT
   * 정적 PAT: IP는 고정되어 있는데 포트를 1:1로 지정해주는 경우 정적 PAT
-  * ![img_109.png](img_109.png)
+  * ![img_109](https://user-images.githubusercontent.com/104918800/177329634-5c655180-5b58-42af-bee7-2115272b63e5.png)
 * AWS의 경우 IP는 유동 NAT임
   * 인스턴스의 IP는 계속 바뀌므로, 서버 운영을 할 수가 없다(공인 주소를 부여, **동적 NAT**)
   * 주소 고정을 위해 Elastic IP 서비스를 사용해야 함 (1개는 무료)
