--- a/ja/_posts/2022-07-11-ACL.md
+++ b/ja/_posts/2022-07-11-ACL.md
@@ -58,6 +58,9 @@ date: 2022-07-11 17:09:10 +0900
 
 
 ## ACL?
+
+방화벽의 원조! 액세스 제어 목록! <br>
+
 1. 번호나 이름을 이용하여 정책을 생성하고, 생성된 정책에 기반해서 패킷을 필터링, 분류한다
    * 필터링: Drop & Permit
    * 분류: 엄청난 량의 패킷들을 그룹화, 분류
@@ -68,13 +71,23 @@ date: 2022-07-11 17:09:10 +0900
    * Standard ACL
      * 출발지 IP(L3)만을 확인하고 필터링
      * 번호를 사용할 경우, 1~99 사용
-     * Word(본인이 원하는 단어) 사용 가능
+     * **Word(본인이 원하는 단어) 사용하는 것이 일반적**
      * 클라우드나 대규모 환경에서 사용하지 않음
    * Extend ACL
      * 출발지 IP, 목적지 IP(L3), 출발지 Port Num, 목적지 Port Num(L4) 를 확인하고 필터링
      * 번호를 사용할 경우, 100~199 사용
-     * Word(본인이 원하는 단어) 사용 가능
-     * 일반적인 방화벽의 역할로써 사용 (AWS의 경우 Extened 방식을 사용)
+     * **Word(본인이 원하는 단어) 사용하는 것이 일반적**
+     * 일반적인 방화벽의 역할로써 사용 (AWS의 경우 Extended 방식을 사용)
+   * (참고: 방화벽이나 라우터는 Inspection기능을 활용하면 L7까지 확인 가능하다)
+
+<br>
+
+> [TIP]: url의 필터링 <br>
+host : www.test.com <br>
+full request uri : www.test.com/img/a.jpg
+* 데이터 부분에 있는 str 을 읽고 정규표현식 등을 활용하여 데이터 필터링을 할 수 있다.
+  * (url 필터링, 확장자를 확인하고 데이터 필터링 가능)
+* Squid Squidguard 소프트웨어를 통해 URL을 필터링할 수 있다
 
 <br>
 <hr>
@@ -83,7 +96,7 @@ date: 2022-07-11 17:09:10 +0900
 
 ![img_313](https://user-images.githubusercontent.com/104918800/178251097-6fad78f0-9b60-4e58-a48d-61e00df808a9.png)
 
-* Standatd ACL
+* Standard ACL
   * Standard 는 특정 IP 주소로부터의 모든 접근에 대하여 허용 또는 차단으로만 구분할 수 있다
     * access-list permit 192.168.1.0 0.0.0.255
     * access-list deny 2.2.2.2 0.0.0.0 => 한 대만 필터링
@@ -110,6 +123,10 @@ date: 2022-07-11 17:09:10 +0900
     * 모든 것을 차단하겠다
     * (telnet, web, ssh 어떤 것이든 L4는 보지 않고 외부에서 내부로 들어오는 것들을 차단) <br> <br>
 
+  * access-list 100 deny icmp any host 3.3.3.3 echo
+    * 바깥쪽에 있는 모든 사용자들이 3.3.3.3에게 ping을 보낼 때 echo 하는 것을 차단하겠다
+    * 웹서비스로는 ping은 허용되지만 ping에 대한 응답 echo는 차단된다 (웹 서비스로는 핑은 들어옴)<br> <br>
+
 * ping www.naver.com
   * 접속이 안 되는 것을 확인할 수 있음
   * 이것은 standard 가 아닌 extended 로 막아 둔 상태임
@@ -122,11 +139,12 @@ date: 2022-07-11 17:09:10 +0900
 ## ACL의 규칙
 
 * ACL은 Rule이 있다!
-  1. Top-Down 방식 (위에서부터 차례대로 적용이 된다)
+  1. **Top-Down 방식** (위에서부터 차례대로 적용이 된다)
   2. 지정하지 않은 나머지 모든 트래픽은 자동으로 차단 된다
      * 별도로 작성하지 않더라도, ACL의 가장 밑단에는 deny ip any any가 생략되어 있다
   3. 생성된 ACL은 적용을 해야 활성화 된다
      * 적용할 때에는 방향을 지정해 주어야 한다
+     * interface, vty, NAT -> ip nat inside source list 1 int fa0/0 overload
 
 <br>
 
@@ -183,6 +201,3 @@ Copyright (c) 2000, 2018, Oracle, MariaDB Corporation Ab and others.
 Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
 ```
 <br>
-
-
-
