--- a/ja/_posts/2022-07-11-VLAN.md
+++ b/ja/_posts/2022-07-11-VLAN.md
@@ -132,9 +132,8 @@ VLAN 사용하기 <br>
 
 <br>
 
-2. Access port
-3. Trunk port
-   * ![img_309](https://user-images.githubusercontent.com/104918800/178251051-3bcf5876-6bdc-49a3-8f9b-565a6e727279.png)
+1. Access port
+2. **Trunk port**
    * 기본적으로 모든 vlan 통신이 가능한 인터페이스!
    * IEEE 802.1q로 표준화 되어 있어, 스위치 제조사가 서로 달라도 호환된다
      * 따라서 물리 스위치, 가상 스위치 간에 통신도 가능하다
@@ -142,3 +141,5 @@ VLAN 사용하기 <br>
      * 해당 트렁크 포트를 지날 때에는 프레임의 vlan id를 태깅하여 넘겨준다
      * 반대쪽 인터페이스에서는, 태깅 부분을 제거한 나머지를 다시 조합하여 원래의 frame으로 만들어 최종 목적지로 전달하게 된다
      * 이를 통해 물리적으로 떨어져 있는 end-device들 까리도 정상적으로 통신이 가능하게 된다
+   * 태깅(Tagging)
+     * ![img_307](https://user-images.githubusercontent.com/104918800/178386032-45235bd8-5ab4-40bc-9cb3-f7ac4fffdcd7.png)
